# zdenovo

./: .dockerignore  .env.example  .gitignore  .mcp.json  .secrets.baseline  CLAUDE.md  Dockerfile  Makefile  README.md  backup-db.sh  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.json
.claude/rules/: architecture.md  code-style.md  git.md  testing.md
backend/: code_validator.py  config.py  db.py  main.py  main_phase2_update.py  pyproject.toml  rate_limit.py  sanitize.py  seed_posts.json
backend/data/: analytics.py  daily_topics.json  post_briefs.json  posts.py  projects.py
backend/data/prompts/: blog_review.md  blog_system.md  blog_tool.json  comment_system.md  comment_tool.json  review_tool.json  sources_system.md  sources_tool.json
backend/middleware/: __init__.py  csrf.py  ratelimit.py
backend/routers/: admin_posts.py  auth.py  comments_api.py  deploys_api.py  drafts_api.py  generate_api.py  posts_api.py  seo.py  series_api.py  topics_api.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_code_validator.py  test_comments.py  test_config.py  test_data.py  test_db.py  test_deploys.py  test_drafts.py  test_e2e.py  test_frontend.py  test_generate.py  test_routes.py  test_series.py  test_topics.py
docs/: admin-auth.md  architecture.md  blog-post-creation-review.md  blog-workflow.md  database-ops.md  deployment.md  workflows.md
docs/specs/: ai-comment-workflow.md  blog-search.md  code-block-badges.md  comment-threading.md  toc.md  (+11 more)
nginx/: app.conf.template  http-only.conf
scripts/: dev-deploy.sh  install-hooks.sh  pre-deploy-check.sh  record-deploy.sh  route-auth-audit.py  server-setup.sh
(+36 files in other folders)
