[project]
name = "zdenovo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "apscheduler>=3.11.2",
    "mistune>=3.2.0",
    "python-multipart>=0.0.32",
    "itsdangerous>=2.2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "pytest-playwright>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".venv/*", "**/__pycache__/*"]
