[project]
name = "zdenovo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "apscheduler>=3.11.2",
    "mistune>=3.2.1",
    "python-multipart>=0.0.32",
    "itsdangerous>=2.2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "slowapi>=0.1.9",
    "bleach>=6.0",
    "pygments>=2.20.0",
    "idna>=3.15",
    "starlette>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "pytest-playwright>=0.8.0",
    "bandit[toml]>=1.7",
    "pip-audit>=2.7",
    "detect-secrets>=1.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".venv/*", "**/__pycache__/*"]
